syntax = "proto3";

option java_package = "io.grpc.examples";

package protoFile;

//service 写在这里
service Greeter {
  //写redis缓存
  rpc RedisCache (RedisCacheRequest) returns (RedisCacheReply) {}
}

//写redis缓存 传入参数
message RedisCacheRequest {
  string name = 1;
  string value = 2;
  int64 express = 3;
}

//写redis缓存 返回信息
message RedisCacheReply {
  int32 code = 4;
  string message = 5;
  map<string , MapValue> data = 6;
}

//返回的map声明
message MapValue {
  bool mapValue = 1;
}